# karst-app-backend

./: .env.example  .gitignore  BACKEND_README.md  LOVABLE_DRIVER_RACES.md  README.md  pyproject.toml  requirements.txt
speed_champion/: .dockerignore  .env.example  .env.production  Dockerfile  db.sqlite3  docker-compose.yml  manage.py
speed_champion/speed_champion/: asgi.py  debug_middleware.py  settings.py  urls.py  wsgi.py
speed_champion/speed_champion/api/: auth_views.py
speed_champion/speed_champion/api/circuits/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
speed_champion/speed_champion/api/circuits/migrations/: 0001_initial.py
speed_champion/speed_champion/api/drivers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
speed_champion/speed_champion/api/drivers/migrations/: 0001_initial.py
speed_champion/speed_champion/api/races/: admin.py  apps.py  models.py  ocr_parser.py  serializers.py  urls.py  views.py
speed_champion/speed_champion/api/races/migrations/: 0001_initial.py
speed_champion/speed_champion/settings/: __init__.py  base.py  development.py  production.py
